test_out/invalid-version.txt
error: invalid version of dependency
 --> invalid-version/package.ctlm:3:38
  |
3 |     git "github.com/jakubDoka/water" "non existent version"
  |                                      ^^^^^^^^^^^^^^^^^^^^^^ here
  |
  = info: the version did not match any tag in 'https://github.com/jakubDoka/water' repository

error: this code feels like desert
 = info: project needs to have exactly one 'moist' dependency
 = help: add 'git "github.com/jakubDoka/water" "*"' to the 'deps {}' sections in 'project.ctlm'
 = help: alternatively you can add 'moist: true' into 'project.ctlm'

